# SakuraAssistant

./: .gitignore  CMakeLists.txt  Makefile  README.md  SparkAssistant.pro  description-pak  main.cpp  mainwindow.cpp  mainwindow.h  monitorthread.h  resources.qrc  sparkassistant-dbgsym_1.0.0_amd64.deb  sparkassistant_1.0.0_amd64.buildinfo  sparkassistant_1.0.0_amd64.changes  sparkassistant_1.0.0_amd64.deb  todoclassmanager.cpp  updatepushbutton.cpp  updatepushbutton.h
cmake/: SparkAppimageConfig.cmake  SparkBuildGraphviz.cmake  SparkDebPackageConfig.cmake  SparkDesktopMacros.cmake  SparkEnvConfig.cmake  SparkFindDtkConfig.cmake  SparkFindLibraries.cmake  SparkFindQt5Config.cmake  SparkFindQt6Config.cmake  SparkMacrosConfig.cmake  SparkMacrosExtendConfig.cmake  linuxdeployqt-help  package-deb.descript  spark-appimage.desktop.in  spark-deb-package.descript  spark-desktop.desktop.in  spark-desktop.desktop.in.txt
debian/: changelog  control  rules
debian/sparkassistant/DEBIAN/: control  md5sums
debian/sparkassistant/usr/share/applications/: sparkassistant.desktop
ip2city/: pom.xml
ip2city/.metadata/: version.ini
ip2city/.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
ip2city/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
ip2city/.metadata/.plugins/org.eclipse.e4.ui.workbench.swt/: dialog_settings.xml
ip2city/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
ip2city/src/main/java/Server/: Ip2City.java
res/: todo.json
src/: Makefile  README.md  SparkAssistant  SparkAssistant.pro  iptoweathercity.cpp  main.cpp  mainwindow.cpp  mainwindow.h  moc_iptoweathercity.cpp  moc_mainwindow.cpp  moc_monitorthread.cpp  moc_predefs.h  moc_todoclassmanager.cpp  moc_weatherparse.cpp  monitorthread.cpp  qrc_resources.cpp  resources.qrc  sparkassistant.desktop  sparkassistant.pro  todo.cpp  todo.h  todoclassmanager.cpp  todoclassmanager.h  weatherparse.cpp  weatherparse.h
src/debian/: changelog  files  rules  sparkassistant.substvars
src/debian/.debhelper/sparkassistant/: dbgsym-build-ids
src/debian/.debhelper/sparkassistant/dbgsym-root/DEBIAN/: control  md5sums
src/debian/sparkassistant/DEBIAN/: control  md5sums
src/ip2citySever/.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree
src/ip2citySever/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
src/ip2citySever/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
src/ip2citySever/.metadata/.plugins/org.eclipse.wst.common.snippets/: user.xml
src/res/: citycode.json
src/sakuraassistant/: aesencrypt.cpp  aesencrypt.h  labelbutton.cpp  main.cpp  mainwindow.cpp  mainwindow.h  monitorthread.cpp  passbook.cpp  passbook.h  passbookpassword.cpp  passbookpassword.h  resources.qrc  sakuraassistant.json  sakuraassistant.pro  todoclassmanager.cpp  todoclassmanager.h  weatherparse.h
src/sakuraassistant/pkg/usr/share/applications/: sakura-assistant.desktop  spark-assistant.desktop
src/sakuraassistant/res/: todo.json
src/sakuraassistant/res/passbook/: data.json
src/sparkassistant/: iptoweathercity.h  labelbutton.cpp  labelbutton.h  mainwindow.cpp  mainwindow.h  monitorthread.cpp  monitorthread.h  passbook.cpp  passbook.h  passbookpassword.cpp  passbookpassword.h  resources.qrc  sparkassistant.pro  todo.cpp  todoclassmanager.cpp
src/sparkassistant/pkg/usr/share/applications/: sparkassistant.desktop
src/sparkassistant/res/passbook/: data.json
(+1 files in other folders)
